fix: align content in testimonials block

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -707,9 +707,9 @@ header {
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 154%;
+  line-height: 157%;
   color: #fcfcfc;
-  margin-bottom: 60px;
+  margin-bottom: 61px;
 }
 .testimonials__button {
   font-style: normal;
